libraries/stzlib/test/temp/log_ve6cs6wy.txt
  File "D:\GitHub\stzlib\libraries\stzlib\test\temp\temp_ve6cs6wy.py", line 56
    function extract_from_litellm_response(response) {
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
